# rust-linux-examples

./: README.md
kernel-space/: README.md  cutom-kernel.md
kernel-space/hello/: Cargo.toml  Makefile
kernel-space/hello/src/: lib.rs
lf-ossummit-india-talk/: README.md
user-space/: README.md
user-space/hello-world/: Cargo.toml  README  README.md
user-space/hello-world/.cargo/: config.toml
user-space/hello-world/src/: main.rs
user-space/my-hello-dlib/: Cargo.toml  README.md
user-space/my-hello-dlib/src/: lib.rs
user-space/my-hello-slib/: Cargo.toml  README.md  test.c
user-space/my-hello-slib/src/: math.rs
user-space/say-hello-in-c/: Cargo.toml  README.md  build.rs
user-space/say-hello-in-c/dlibs/: hello.c
user-space/say-hello-in-c/src/: main.rs
